# docs/swagger.json
@@ -513,8 +513,14 @@
                             "$ref": "#/definitions/main.UserResponse"
                         }
                     },
-                    "400": {
+                    "404": {
                         "description": "User not found",
+                        "schema": {
+                            "$ref": "#/definitions/main.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to fetch user",
                         "schema": {
                             "$ref": "#/definitions/main.ErrorResponse"
                         }
